--- a/bordertextview/src/main/res/layout/activity_main.xml
+++ b/bordertextview/src/main/res/layout/activity_main.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/activity_main"
-    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="com.neworin.bordertextview.MainActivity">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <com.neworin.bordertextview.BorderTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:borderBackgroundColor="@color/colorAccent"
+        app:text="你好"
+        app:textColor="@color/colorPrimary"
+        app:textSize="20sp" />
 </RelativeLayout>
